immich/psql.example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-psql
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-psql
  template:
    metadata:
      labels:
        app: immich-psql
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 26
        runAsGroup: 26
        fsGroup: 26
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: postgres
          image: ghcr.io/tensorchord/cloudnative-vectorchord:16.9-0.4.3
          args:
            - "-c"
            - "shared_preload_libraries=vchord.so"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: immich-psql-pvc
        - name: init-sql
          configMap:
            name: immich-psql-init
---
apiVersion: v1
kind: Service
metadata:
  name: immich-psql
  namespace: immich
spec:
  selector:
    app: immich-psql
  ports:
    - port: 5432
      targetPort: 5432
