immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "5g"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - photos.prayujt.com
    secretName: photos-prayujt-certs
  rules:
  - host: photos.prayujt.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: immich-server
            port:
              number: 3001
